# cotc-server

./: .gitignore  README.md  pyproject.toml
application/: __init__.py  app.py  base.py
application/common/: __init__.py  _util.py
application/config/: __init__.py  _config.py  config.json
application/db/: __init__.py  _db.py
application/db/models/: __init__.py  _models.py
application/figs/: __init__.py  _gauge.py
application/logs/: collector.log.jsonl
application/static/css/: 404.css  base.css  history.css  latest.css
application/static/js/: base.js  gauge.js  history.js
application/templates/: 404.html  base.html  history.html  latest.html
cotc-common/: pyproject.toml
cotc-common/src/cotc_common/argparse/: __init__.py  _config.py  _init.py  _parser.py
cotc-common/src/cotc_common/config/: __init__.py  _config.py
cotc-common/src/cotc_common/logging/: __init__.py  _config.py  _init.py  config.json
cotc-common/src/cotc_common/metrics/: __init__.py  _metrics.py
cotc-common/src/cotc_common/types/: __init__.py  _types.py
cotc-common/src/cotc_common/util/: __init__.py  _style.py  _util.py
instance/: db.sqlite3
