[project]
name = "cotc-common"
version = "0.1.0"
description = "Common library w/ logging/argparse configuration, pydantic models, types, and utility functions"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
